# long.so

./: .gitattributes  .gitignore  .gitmodules  ARCHITECTURE.md  AUTHORS.md  Dockerfile  Dockerfile.cmd  Dockerfile.contracts  Dockerfile.graphql  Dockerfile.ingestor  HACKING.md  LICENSE  Makefile  NOTICE.txt  README.md  codecov.yml  go.mod  go.sum  tests.sh
.github/: dependabot.yml
.github/workflows/: check-frontend.yml  cloudflare.yml  codecov.yml  deploy-arb-sepolia-graph.yml  deploy-audits.yml  deploy-config.yml  deploy-docs.yml  deploy-faucet.yml  deploy-features.yml  deploy-graphql-http.yml  deploy-ipfs.yml  deploy-spn-mainnet-graph.yml  deploy-spn-testnet-graph.yml  deploy-static.yml  format.yml  frontend-test.yml  lint-format-js.yml  lint.yml  semgrep.yml  snyk.yml  sqlfluff.yml  tests-e2e.yml  tests-unit-go.yml  tests-unit-js.yml  timescale.yml
.zed/: settings.json
audits/: README.md  index.html
automation/: Dockerfile.testing  docker-compose.yml  nitro-testnode-docker-compose.yml
cmd/: build.mk  golang.mk
cmd/faucet.superposition/: Makefile  README.md  main.go  schema.graphqls  sender.go  sender_test.go
cmd/graphql.ethereum/: .gitignore  Makefile  README.md  gqlgen.yml  main.go  pools.go  schema.graphqls
cmd/ingestor.ethereum/: .gitignore  README.md  func.go  main.go
cmd/ingestor.logs.ethereum/: func.go  func_test.go  main.go  polling-db.go
cmd/snapshot.ethereum/: README.md  database.go  main.go  main_test.go  rpc.go  rpc_test.go
config/: README.md  pools.toml  stakers.json
contracts/: Cargo.toml
db/: Dockerfile  README.md  docker.sh
db/migrations/: 1712766721-events_seawater.sql  1712766721-initial_ethereum_data.sql  1712766722-events_erc20.sql  1713325142-queue_applications_block_header_v1.sql  1713545565-seawater_positions.sql  1714115853-checkpoint_seawater_volume_timeseries.sql  1714115853-data_seawater_timeseries.sql  1715975362-ingestor_checkpointing.sql  1716273125-seawater_swaps.sql  1718055130-faucet_init.sql.sql  1718510127-snapshot_initial.sql  1718663667-snapshot_liquidity_sums.sql  1723693657-events_leo.sql  1724063832-seawater_swaps_tx.sql  1724717941-seawater_swaps_tx_filter_fusdc.sql  1724739049-init_notes.sql  1724812411-events_leo_positions.sql  1725438640-seawater_active_positions_index_pool.sql  1725442283-seawater_snapshot_positions_latest_1_index.sql  1725515346-events_seawater_updatepositionliquidity_block_number_index.sql  1725515516-seawater_swaps_1_sender_index.sql  1725866798-seawater_positions_vested.sql  1726642875-leo_campaigns.sql
docs/: amm.dot
features/: features.json
lib/config/: config.go  defaults.go  pools.go
lib/events/: events.go
pkg/: -princemaker  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  ERRORS.md  Makefile  README.md  SEAWATER_TUTORIAL.md  config.mk  deploy-seawater.sh  deploy-stylus.sh  deploy.sh  foundry.toml  package-lock.json  package.json  rust-toolchain.toml  test-deploy.sh  test-onchain.sh  tests.sh  tsconfig.json  tsconfig.tsbuildinfo
pkg/clob/: README.md
pkg/contracts/: Cargo.toml
pkg/contracts/.cargo/: config.toml
pkg/contracts/erc1155-token/: Cargo.toml
pkg/contracts/erc1155-token/src/: main.rs
pkg/contracts/erc721-token/: Cargo.toml
pkg/contracts/erc721-token/src/: main.rs
pkg/contracts/seawater/: Cargo.toml
pkg/contracts/seawater/src/: error.rs  lib.rs  main.rs  pool.rs  position.rs  test_shims.rs  tick.rs  types.rs
pkg/contracts/seawater/src/maths/: bit_math.rs  full_math.rs  mod.rs  sqrt_price_math.rs  swap_math.rs  tick_math.rs  utils.rs
pkg/contracts/seawater/tests/: reference_impls.rs
pkg/contracts/seawater/tests/reference/: full_math.rs  tick_math.rs
pkg/contracts/seawater/uniswap-v3-math/: Cargo.toml
pkg/contracts/seawater/uniswap-v3-math/src/: bit_math.rs  full_math.rs  lib.rs  sqrt_price_math.rs  swap_math.rs  tick_bitmap.rs  types.rs
pkg/ethers-tests/: seawater.ts  test.ts
pkg/interfaces/: IERC1155.sol  IERC721Metadata.sol  IFaucet.sol  ISeawater.sol  ISeawaterAMM.sol  ISeawaterEvents.sol  ISeawaterExecutors.sol  ISeawaterOwnership.sol
pkg/leo/: Cargo.toml
pkg/leo/proptest-regressions/: lib.txt
pkg/leo/src/: calldata.rs  calldata_seawater.rs  erc20.rs  error.rs  events.rs  host.rs  host_seawater.rs  immutables.rs  lib.rs  longtail.rs  maths.rs  nft_manager.rs  seawater.rs  utils.rs  wasm_seawater.rs
pkg/leo/tests/: lib.rs
pkg/seawater/: Cargo.toml  README.md
pkg/seawater-tests/: Cargo.toml
pkg/seawater-tests/src/: main.rs
pkg/seawater/proptest-regressions/: lib.txt
pkg/seawater/proptest-regressions/maths/: sqrt_price_math.txt
pkg/seawater/src/: calldata_erc20.rs  erc20.rs  erc20_host.rs  error.rs  eth_serde.rs  events.rs  host_erc20.rs  host_test_shims.rs  host_test_utils.rs  immutables.rs  lib.rs  main.rs  pool.rs  position.rs  test_shims.rs  test_utils.rs  tick.rs  types.rs  vm_hooks.rs  wasm_erc20.rs  wasm_test_utils.rs
pkg/seawater/src/maths/: bit_math.rs  full_math.rs  liquidity_math.rs  mod.rs  sqrt_price_math.rs  swap_math.rs  tick.rs  tick_bitmap.rs  tick_math.rs  unsafe_math.rs  utils.rs
pkg/seawater/tests/: get-liq-for-amounts.lst  get-liq-for-amounts.rs  lib-end-to-end-proptest.proptest-regressions  lib-end-to-end-proptest.rs  lib-end-to-end.rs  lib-high-level-tests.rs  lib.rs  math-proptest.rs  pools.rs  reference_impls.rs
pkg/seawater/tests/reference/: full_math.rs  tick_math.rs
pkg/sol/: Faucet.sol  IERC165.sol  IFaucet.sol  ILeo.sol  ILeoEvents.sol  ISeawaterAMM.sol  ISeawaterEvents.sol  ISeawaterExecutors.sol  OwnershipNFTs.sol  SeawaterAMM.sol
pkg/sol/utils/: Errors.sol
pkg/test/: Faucet.t.sol  LightweightERC20.sol  LightweightProxy.sol  MockSeawater.sol.disabled  OwnershipNFTsTest.t.sol.disabled  permit2.sol
pkg/utils/: .gitignore  Makefile  bloom-filter.go  bloom-filter_test.go
static/: empty
web/: .env  .env.example  .eslintrc.json  .gitignore  .lintstagedrc.json  .prettierrc.json  README.md  codegen.ts  cypress.config.js  jest.config.js  jest.config.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
(+331 files in other folders)
