[workspace]

resolver = "2"

members = [
    "seawater",
    "leo",
]

[profile.dev]
opt-level = "s"
debug = true
debug-assertions = true
panic = "unwind"
codegen-units = 1

[profile.release]
codegen-units = 1
panic = "abort"
strip = true
lto = true
debug = false
rpath = false
debug-assertions = false
incremental = false

[profile.release-complete]
opt-level = 3
inherits = "release"

[profile.release-codesize]
opt-level = "z"
inherits = "release"

[workspace.dependencies]
stylus-sdk = "0.6.0"
stylus-proc = "0.6.0"
thiserror = "1.0.48"
tiny-keccak = "2.0.2"
ruint = { version = "1.11.0", features = ["num-traits"] }
num-traits = "0.2.19"
alloy-sol-types = "=0.7.6"
alloy-sol-macro = "=0.7.6"
ruint-macro = "1.2.1"
keccak-const = "0.2.0"
const-hex = { version = "1.10.0", features = ["alloc"] }

[patch.crates-io]
alloy-sol-types = { git = "https://github.com/fluidity-money/alloy-core" }
alloy-sol-macro = { git = "https://github.com/fluidity-money/alloy-core" }
alloy-core = { git = "https://github.com/fluidity-money/alloy-core" }
alloy-primitives = { git = "https://github.com/fluidity-money/alloy-core" }
