[package]
name = "seawater"
version = "0.1.0"
edition = "2021"

[lib]
name = "libseawater"
edition = "2021"

[[bin]]
name = "seawater"
path = "src/main.rs"

[dependencies]
#stylus-sdk = { workspace = true, default-features = false, features = [] }
stylus-sdk = { workspace = true }
alloy-sol-types.workspace = true
ruint.workspace = true
ruint-macro.workspace = true
thiserror.workspace = true
tiny-keccak.workspace = true
lol_alloc.workspace = true
keccak-const.workspace = true
const-hex.workspace = true

[dev-dependencies]
rand = "0.8.5"
maplit = "1.0.2"

[features]
export-abi = ["stylus-sdk/export-abi"]
swaps = []
swap_permit2 = []
quotes = []
positions = []
update_positions = []
admin = []
debug = []
testing = []
testing-dbg-erc20 = []
testing-dbg-compute_swap_step = []
testing-dbg-mul_div = []
testing-dbg-get_tick_at_sqrt_ratio = []
testing-dbg-get_sqrt_ratio_at_tick = []
