[package]
name = "seawater"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"

[lib]
name = "libseawater"
edition = "2021"
crate-type   = ["rlib", "cdylib"]

[[bin]]
name = "seawater"
path = "src/main.rs"

[dependencies]
stylus-sdk = { workspace = true }
alloy-sol-types.workspace = true
ruint.workspace = true
ruint-macro.workspace = true
thiserror.workspace = true
tiny-keccak.workspace = true
keccak-const.workspace = true
const-hex.workspace = true
num-traits.workspace = true

[dev-dependencies]
maplit = "1.0.2"
arrayvec = "0.7.6"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
proptest = "1.5.0"
alloy-primitives = { version = "0.7.6", features = ["getrandom"] }
getrandom = "0.2.15"
rand = "0.8.5"

[features]
export-abi = ["stylus-sdk/export-abi"]
swaps = []
swap_permit2_a = []
quotes = []
positions = []
update_positions = []
admin = []
migrations = []
adjust_positions = []
swap_permit2_b = []
debug = []
testing = []
testing-dbg = []
