[package]
name = "seawater"
version = "0.1.0"
edition = "2021"

[dependencies]
#stylus-sdk = { workspace = true, default-features = false, features = [] }
stylus-sdk = { workspace = true }
ruint.workspace = true
ruint-macro.workspace = true
thiserror.workspace = true
tiny-keccak.workspace = true
wee_alloc.workspace = true

[dev-dependencies]
rand = "0.8.5"

[features]
export-abi = ["stylus-sdk/export-abi"]

